fix(themes): remove redundant styles and improve button-group alignment
- Removed `aspect-ratio: 1` from FAB button styles since it courses a visual bug in the samples repo where the buttons that have text + icon become to tall.
- Added `width: 100%` to button-group items for better container alignment if the buttongroup itself has display of inline block adn a hardcoded width.

--- a/projects/igniteui-angular/button-group/src/button-group/themes/_base.scss
+++ b/projects/igniteui-angular/button-group/src/button-group/themes/_base.scss
@@ -195,6 +195,10 @@ $_theme: $material;
             flex-flow: column;
 
             @include e(item) {
+                // in case the display of the group is set to inline-block and the group hase a width,
+                // the items need to have width 100% to fill the group container
+                width: 100%;
+
                 &:not(:nth-child(1)) {
                     margin-top: rem(-1px) !important;
                     margin-inline-start: 0;
