--- a/projects/igniteui-angular/core/src/core/styles/components/button/_button-theme.scss
+++ b/projects/igniteui-angular/core/src/core/styles/components/button/_button-theme.scss
@@ -780,7 +780,6 @@
 
             min-width: var-get($fab-theme, 'size');
             min-height: var-get($fab-theme, 'size');
-            aspect-ratio: 1;
             line-height: unset;
             white-space: nowrap;
             color: var-get($fab-theme, 'foreground');
